# 888-solution

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml  setup.cfg
app/: cli.py  enums.py  models.py  schemas.py
tests/: conftest.py  test_cli.py  test_models.py  test_schemas.py
